# Mips-goggles

./: .gitignore  Cargo.toml  README.md
examples/: linear_sweep.rs
examples/linear_sweep/: Cargo.toml
linear_sweep/: Cargo.toml
linear_sweep/src/: main.rs
src/: error.rs  lib.rs  test.rs  utils.rs
src/disassembler/: mod.rs  opcode_handlers.rs
src/instruction/: mnemonics.rs  mod.rs
src/operands/: mod.rs  registers.rs
src/test/: mod.rs  test_arithmetic.rs  test_bit_manipulation.rs  test_branch_jump.rs  test_load_store.rs  test_logic.rs  test_logic_operations.rs  test_moves.rs  test_pop.rs  test_special.rs  test_trap.rs
